fix overlap text under baseline

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -20,4 +20,5 @@ body
         position absolute
         left 0
         top 0
+        bottom -.5em
         color #F90
